Glocal CSS updated

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 <header>
     <img id="logo" src="images/logo.svg" alt="Enterprise Systems Logo"/>
     <nav>
-        <a href="#">Home</a>
-        <a href="#">Contact Us</a>
-        <a href="#">Our Team</a>
-        <a href="#">Testimonials</a>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Our Team</a></li>
+            <li><a href="#">Testimonials</a></li>
+        </ul>
     </nav>
     <div id="motto">
         <p>
@@ -41,6 +43,7 @@
                 By outsourcing to Elite Systems you'll have access to experts with many years of experience,
                 available for on-site or remote support - at a fraction of the cost!
             </p>
+            <a href="more.html">Additional Information</a>
         </div>
     </section>
 
@@ -57,6 +60,7 @@
                 back-end systems and propose ways of bringing efficiency using automated solutions including:
                 electronic document management, business process engines, mediation software, analytics and more.
             </p>
+            <a href="more.html">Additional Information</a>
         </div>
     </section>
 
@@ -74,6 +78,7 @@
                 software upgrades, reduce power consumption, and permit staff to work remotely in the event
                 of a crisis.
             </p>
+            <a href="more.html">Additional Information</a>
         </div>
     </section>
 
@@ -90,6 +95,7 @@
                 access points inside (and if required, outside) your facility. We tune frequencies, settings,
                 modulation coding schemes, and bandwidth prioritization according to your specific needs.
             </p>
+            <a href="more.html">Additional Information</a>
         </div>
     </section>
 
@@ -107,6 +113,7 @@
                 financial institutions to retrieve balances etc.). We also provide solutions to
                 telecommunication companies and service providers.
             </p>
+            <a href="more.html">Additional Information</a>
         </div>
     </section>
 
@@ -125,6 +132,7 @@
                 locations, demarcation points etc. We adhere strictly to EIA/TIA structured cabling and
                 safety standards.
             </p>
+            <a href="more.html">Additional Information</a>
         </div>
     </section>
 
@@ -141,6 +149,7 @@
                 hardware/software solutions to do things such as: monitoring water levels in rivers, relaying
                 sluice door positions to central control stations etc.
             </p>
+            <a href="more.html">Additional Information</a>
         </div>
     </section>
 
@@ -157,6 +166,7 @@
                 Business Intelligence (BI) solutions and system interoperability we can design solutions
                 that deliver automated reports and much more.
             </p>
+            <a href="more.html">Additional Information</a>
         </div>
     </section>
 
@@ -174,15 +184,14 @@
                 expiry dates and much more. We have in-depth knowledge of several POS solutions to get you
                 up-and-running quickly.
             </p>
+            <a href="more.html">Additional Information</a>
         </div>
     </section>
 
 </main>
 
 <footer>
-
-    Copyright &copy; 2024 - Student assessment website by S. Dow
+    <p>Copyright &copy; 2024 - Student assessment website by S. Dow</p>
 </footer>
-
 </body>
 </html>
