--- a/index.html
+++ b/index.html
@@ -1,197 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>S. Dow Assessment Website</title>
     <link rel="stylesheet" href="css/global.css">
 </head>
+
 <body>
-<img id="corner_image" src="images/corner_image.png" alt=""/>
-<header>
-    <img id="logo" src="images/logo.svg" alt="Enterprise Systems Logo"/>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Our Team</a></li>
-            <li><a href="#">Testimonials</a></li>
-        </ul>
-    </nav>
-    <div id="motto">
-        <p>
-            We're in the business of bringing efficiency to organizations through the use of technology,
-            with a human-centric approach. With many years of experience in a wide cross-section of Information
-            Technology, we deliver resilient technical solutions to small businesses, corporations, and governments...
-            in Guyana, and internationally.
-        </p>
-        <p>
-            Send us a message or give us a call. Perhaps we can help.
-        </p>
-    </div>
-</header>
-
-<main>
-    <!-- Service: Retained IT Support -->
-    <section class="service">
-        <img src="images/it_support_shield.svg" alt="">
-        <div class="service_description">
-            <h2>
-                Retained IT Support
-            </h2>
+    <img id="corner_image" src="images/corner_image.png" alt="" />
+    <header>
+        <img id="logo" src="images/logo.svg" alt="Enterprise Systems Logo" />
+        <nav>
+            <ul>
+                <li><a id="btn_home" href="?page=home">Home</a></li>
+                <li><a id="btn_contact_us" href="?page=contact_us">Contact Us</a></li>
+                <li><a id="btn_our_team" href="?page=our_team">Our Team</a></li>
+                <li><a id="btn_testimonials" href="?page=testimonials">Testimonials</a></li>
+            </ul>
+        </nav>
+        <div id="motto">
             <p>
-                Employing a full-time IT administrator will cost you a yearly salary plus benefits.
-                By outsourcing to Elite Systems you'll have access to experts with many years of experience,
-                available for on-site or remote support - at a fraction of the cost!
+                We're in the business of bringing efficiency to organizations through the use of technology,
+                with a human-centric approach. With many years of experience in a wide cross-section of Information
+                Technology, we deliver resilient technical solutions to small businesses, corporations, and
+                governments...
+                in Guyana, and internationally.
             </p>
-            <a href="more.html">Additional Information</a>
-        </div>
-    </section>
-
-    <!-- Service: Business Process Automation -->
-    <section class="service">
-        <img src="images/bpm.svg" alt="">
-        <div class="service_description">
-            <h2>
-                Business Process Automation
-            </h2>
             <p>
-                Are things falling through the cracks in your business? Are staff overwhelmed in keeping track
-                of customer requests? Want to have all your systems working in harmony? Let us assess your
-                back-end systems and propose ways of bringing efficiency using automated solutions including:
-                electronic document management, business process engines, mediation software, analytics and more.
+                Send us a message or give us a call. Perhaps we can help.
             </p>
-            <a href="more.html">Additional Information</a>
         </div>
-    </section>
+    </header>
 
-    <!-- Service: Thin Client Computing -->
-    <section class="service">
-        <img src="images/thin_client.svg" alt="">
-        <div class="service_description">
-            <h2>
-                Thin Client Computing
-            </h2>
-            <p>
-                Do you have a hodgepodge mixture of computers and operating systems in your organization?
-                Is your network becoming challenging to support? With our vast experience in Virtual Desktop
-                Infrastructure (VDI) and Remote Desktop solutions we will: reduce down-time, simplify
-                software upgrades, reduce power consumption, and permit staff to work remotely in the event
-                of a crisis.
-            </p>
-            <a href="more.html">Additional Information</a>
-        </div>
-    </section>
+    <main id="content">
+     
 
-    <!-- Service: High Density Wi-Fi -->
-    <section class="service">
-        <img src="images/wifi.svg" alt="">
-        <div class="service_description">
-            <h2>
-                High Density Wi-Fi
-            </h2>
-            <p>
-                Do you have Wi-Fi issues? Unable to roam around your organization uninterrupted? If so, then
-                let us perform an RF site survey. We will then optimally configure and position your Wi-Fi
-                access points inside (and if required, outside) your facility. We tune frequencies, settings,
-                modulation coding schemes, and bandwidth prioritization according to your specific needs.
-            </p>
-            <a href="more.html">Additional Information</a>
-        </div>
-    </section>
+    </main>
 
-    <!-- Service: PBX, IVR, and Telco Services -->
-    <section class="service">
-        <img src="images/chat.svg" alt="">
-        <div class="service_description">
-            <h2>
-                PBX, IVR, and Telco Services
-            </h2>
-            <p>
-                With many years of experience in telecommunications we are aptly equipped to provide
-                services to customers ranging from the small business to the large corporation. We can
-                deploy traditional PBX systems, IP PBX systems, or IVR systems (such as those used by
-                financial institutions to retrieve balances etc.). We also provide solutions to
-                telecommunication companies and service providers.
-            </p>
-            <a href="more.html">Additional Information</a>
-        </div>
-    </section>
-
-    <!-- Service: Network Design -->
-    <section class="service">
-        <img src="images/network.svg" alt="">
-        <div class="service_description">
-            <h2>
-                Network Design
-            </h2>
-            <p>
-                Are you erecting a building? Do you need a network installed? Let us work along with your
-                architect to avoid unsightly cables running on the surface of your walls. With our experience
-                in the design of hybrid fiber/ethernet networks we will identify: locations for wall-mount
-                jacks, conduit runs, conduit sizes, cable pull points, ideal Wi-Fi AP locations, comm room
-                locations, demarcation points etc. We adhere strictly to EIA/TIA structured cabling and
-                safety standards.
-            </p>
-            <a href="more.html">Additional Information</a>
-        </div>
-    </section>
-
-    <!-- Service: Software Development -->
-    <section class="service">
-        <img src="images/code.svg" alt="">
-        <div class="service_description">
-            <h2>
-                Software Development
-            </h2>
-            <p>
-                Can’t find “out-of-the-box” software to serve a specific need? Yes, we develop web applications,
-                machine-to-machine (M2M) applications, desktop applications, mobile applications, and complete
-                hardware/software solutions to do things such as: monitoring water levels in rivers, relaying
-                sluice door positions to central control stations etc.
-            </p>
-            <a href="more.html">Additional Information</a>
-        </div>
-    </section>
-
-    <!-- Service: Business Intelligence -->
-    <section class="service">
-        <img src="images/graph_up.svg" alt="">
-        <div class="service_description">
-            <h2>
-                Business Intelligence
-            </h2>
-            <p>
-                Are you tired of waiting several days to have your reports ready? Do you want to identify
-                discrepancies (usually financial) as quickly as possible? With our vast experience in
-                Business Intelligence (BI) solutions and system interoperability we can design solutions
-                that deliver automated reports and much more.
-            </p>
-            <a href="more.html">Additional Information</a>
-        </div>
-    </section>
-
-    <!-- Service: Point of Sale -->
-    <section class="service">
-        <img src="images/cash_coin.svg" alt="">
-        <div class="service_description">
-            <h2>
-                Point of Sale
-            </h2>
-            <p>
-                A point-of-sale system is the hardware and software that enable your business to complete
-                those sales. A good POS system will make customer check out quick and hassle-free. It's
-                supposed to make it easy to keep track of inventory, restock appropriately, keep on top of
-                expiry dates and much more. We have in-depth knowledge of several POS solutions to get you
-                up-and-running quickly.
-            </p>
-            <a href="more.html">Additional Information</a>
-        </div>
-    </section>
-
-</main>
-
-<footer>
-    <p>Copyright &copy; 2024 - Student assessment website by S. Dow</p>
-</footer>
+    <footer>
+        <p>Copyright &copy; 2024 - Student assessment website by S. Dow</p>
+    </footer>
 </body>
+<script>
+    window.onload = function () {
+        // acquire parameter
+        const searchParams = new URLSearchParams(window.location.search);
+        if (searchParams.has('page')) {
+            AJAXload(searchParams.get('page'));
+        }else{
+            AJAXload('home');
+        }
+
+    }
+
+    function AJAXload(page) {
+        // highlight button
+        document.getElementById('btn_'+page).className = 'btn_active';
+        // attemp AJAX call
+        if (window.XMLHttpRequest) {
+            request = new XMLHttpRequest();
+            try {
+                request.onreadystatechange = getInfo;
+                request.open("GET", 'pages/'+page+'.html', true);
+                request.send();
+            } catch (e) {
+                alert("Unable to connect to server");
+            }
+        } else {
+            // display AJAX error by changing class for part of page
+        }
+    }
+
+    function getInfo() {
+        if (request.readyState == 4) {
+            var val = request.responseText;
+            console.log(val);
+            document.getElementById('content').innerHTML = val;
+        }
+    }
+</script>
+
 </html>
