--- a/pages/home.html
+++ b/pages/home.html
@@ -11,13 +11,13 @@
             back-end systems and propose ways of bringing efficiency using automated solutions including:
             electronic document management, business process engines, mediation software, analytics and more.
         </p>
-        <a href="more.html">Additional Information</a>
+        <a href="index.html?page=details_bpm">Additional Information</a>
     </div>
 </section>
 
 <!-- Service: Thin Client Computing -->
 <section class="service">
-    <img src="images/thin_client.svg" alt="">
+    <img src="images/thin_clients.svg" alt="">
     <div class="service_description">
         <h2>
             Thin Client Computing
@@ -29,7 +29,7 @@
             software upgrades, reduce power consumption, and permit staff to work remotely in the event
             of a crisis.
         </p>
-        <a href="more.html">Additional Information</a>
+        <a href="index.html?page=details_thin_clients">Additional Information</a>
     </div>
 </section>
 
@@ -46,13 +46,13 @@
             access points inside (and if required, outside) your facility. We tune frequencies, settings,
             modulation coding schemes, and bandwidth prioritization according to your specific needs.
         </p>
-        <a href="more.html">Additional Information</a>
+        <a href="index.html?page=details_wifi">Additional Information</a>
     </div>
 </section>
 
 <!-- Service: PBX, IVR, and Telco Services -->
 <section class="service">
-    <img src="images/chat.svg" alt="">
+    <img src="images/telco.svg" alt="">
     <div class="service_description">
         <h2>
             PBX, IVR, and Telco Services
@@ -64,13 +64,13 @@
             financial institutions to retrieve balances etc.). We also provide solutions to
             telecommunication companies and service providers.
         </p>
-        <a href="more.html">Additional Information</a>
+        <a href="index.html?page=details_telco">Additional Information</a>
     </div>
 </section>
 
 <!-- Service: Network Design -->
 <section class="service">
-    <img src="images/network.svg" alt="">
+    <img src="images/networking.svg" alt="">
     <div class="service_description">
         <h2>
             Network Design
@@ -83,13 +83,13 @@
             locations, demarcation points etc. We adhere strictly to EIA/TIA structured cabling and
             safety standards.
         </p>
-        <a href="more.html">Additional Information</a>
+        <a href="index.html?page=details_networking">Additional Information</a>
     </div>
 </section>
 
 <!-- Service: Software Development -->
 <section class="service">
-    <img src="images/code.svg" alt="">
+    <img src="images/coding.svg" alt="">
     <div class="service_description">
         <h2>
             Software Development
@@ -100,13 +100,13 @@
             hardware/software solutions to do things such as: monitoring water levels in rivers, relaying
             sluice door positions to central control stations etc.
         </p>
-        <a href="more.html">Additional Information</a>
+        <a href="index.html?page=details_coding">Additional Information</a>
     </div>
 </section>
 
 <!-- Service: Business Intelligence -->
 <section class="service">
-    <img src="images/graph_up.svg" alt="">
+    <img src="images/business_intelligence.svg" alt="">
     <div class="service_description">
         <h2>
             Business Intelligence
@@ -117,13 +117,13 @@
             Business Intelligence (BI) solutions and system interoperability we can design solutions
             that deliver automated reports and much more.
         </p>
-        <a href="more.html">Additional Information</a>
+        <a href="index.html?page=details_business_intelligence">Additional Information</a>
     </div>
 </section>
 
 <!-- Service: Point of Sale -->
 <section class="service">
-    <img src="images/cash_coin.svg" alt="">
+    <img src="images/pos.svg" alt="">
     <div class="service_description">
         <h2>
             Point of Sale
@@ -135,6 +135,6 @@
             expiry dates and much more. We have in-depth knowledge of several POS solutions to get you
             up-and-running quickly.
         </p>
-        <a href="more.html">Additional Information</a>
+        <a href="index.html?page=details_pos">Additional Information</a>
     </div>
 </section>
