--- a/pages/details_bpm.html
+++ b/pages/details_bpm.html
@@ -37,5 +37,5 @@
         elit. Donec sit amet sagittis elit. Sed sit amet suscipit nisi. In hac habitasse platea dictumst. Aliquam aliquam 
         sagittis felis id semper.
     </p>
-    <a href="index.html">OK</a>
+    <a href="index.html" class="ok_btn">OK</a>
 </div>
