--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>S. Dow Assessment Website</title>
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/dialog.css">
+    <link rel="stylesheet" href="css/bpm_animation.css">
 </head>
 
 <body>
