--- a/pages/details_bpm.html
+++ b/pages/details_bpm.html
@@ -1,6 +1,6 @@
 <div class="details">
     <div class="bpm_animation">
-        <img src="images/token_orange.svg" alt="">
+        <img id="token" src="images/token_orange.svg" alt="">
     </div>
     <h1>Business Process Automation Solutions</h1>
     <p>
