--- a/pages/home.html
+++ b/pages/home.html
@@ -13,7 +13,7 @@
                 back-end systems and propose ways of bringing efficiency using automated solutions including:
                 electronic document management, business process engines, mediation software, analytics and more.
             </p>
-            <a href="index.html?page=details_bpm">Additional Information</a>
+            <a href="?page=home_bpm">Additional Information</a>
         </div>
     </section>
 
@@ -31,7 +31,7 @@
                 software upgrades, reduce power consumption, and permit staff to work remotely in the event
                 of a crisis.
             </p>
-            <a href="index.html?page=details_thin_clients">Additional Information</a>
+            <a href="?page=home_thin_clients">Additional Information</a>
         </div>
     </section>
 
@@ -48,7 +48,7 @@
                 access points inside (and if required, outside) your facility. We tune frequencies, settings,
                 modulation coding schemes, and bandwidth prioritization according to your specific needs.
             </p>
-            <a href="index.html?page=details_wifi">Additional Information</a>
+            <a href="?page=home_wifi">Additional Information</a>
         </div>
     </section>
 
@@ -66,7 +66,7 @@
                 financial institutions to retrieve balances etc.). We also provide solutions to
                 telecommunication companies and service providers.
             </p>
-            <a href="index.html?page=details_telco">Additional Information</a>
+            <a href="?page=home_telco">Additional Information</a>
         </div>
     </section>
 
@@ -85,7 +85,7 @@
                 locations, demarcation points etc. We adhere strictly to EIA/TIA structured cabling and
                 safety standards.
             </p>
-            <a href="index.html?page=details_networking">Additional Information</a>
+            <a href="?page=home_networking">Additional Information</a>
         </div>
     </section>
 
@@ -102,7 +102,7 @@
                 hardware/software solutions to do things such as: monitoring water levels in rivers, relaying
                 sluice door positions to central control stations etc.
             </p>
-            <a href="index.html?page=details_coding">Additional Information</a>
+            <a href="?page=home_coding">Additional Information</a>
         </div>
     </section>
 
@@ -119,7 +119,7 @@
                 Business Intelligence (BI) solutions and system interoperability we can design solutions
                 that deliver automated reports and much more.
             </p>
-            <a href="index.html?page=details_business_intelligence">Additional Information</a>
+            <a href="?page=home_business_intelligence">Additional Information</a>
         </div>
     </section>
 
@@ -137,7 +137,7 @@
                 expiry dates and much more. We have in-depth knowledge of several POS solutions to get you
                 up-and-running quickly.
             </p>
-            <a href="index.html?page=details_pos">Additional Information</a>
+            <a href="?page=home_pos">Additional Information</a>
         </div>
     </section>
 </div>
