--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>S. Dow Assessment Website</title>
     <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/dialog.css">
+    <link rel="stylesheet" href="css/dialogs.css">
     <link rel="stylesheet" href="css/bpm_animation.css">
 </head>
 
@@ -30,7 +30,7 @@
         <nav>
             <ul class="button_bar">
                 <li><a id="btn_home" class="btn_inactive" href="?page=home">Home</a></li>
-                <li><a id="btn_contact_us" class="btn_inactive" href="#" onclick="showContactForm()">Contact Us</a></li>
+                <li><a id="btn_contact_us" class="btn_inactive" href="#" onclick="contact_dialog.showModal()">Contact Us</a></li>
                 <li><a id="btn_our_team" class="btn_inactive" href="?page=our_team">Our Team</a></li>
                 <li><a id="btn_testimonials" class="btn_inactive" href="?page=testimonials">Testimonials</a></li>
             </ul>
@@ -54,10 +54,20 @@
             <label for="message">Message</label>
             <textarea type="text" id="message" name="message"></textarea>
             <div class="contact_buttons">
-                <button type="submit" onclick="submitContactForm();return false;">Submit</button>
+                <button type="submit" onclick="submitContactForm()">Submit</button>
                 <button type="reset" onclick="closeContactForm()">Cancel</button>
             </div>
         </form>
+    </dialog>
+
+    <!-- Success dialog -->
+    <dialog class="contact_submitted_dialog">
+        <img src="images/check.svg" alt=""/>
+        <p>
+            Thank you for reaching out to us.<br/>
+            We will be in touch with you shortly.
+        </p>
+        <a class="ok_btn" onclick="closeContactSubmittedForm()">OK</a>
     </dialog>
 
     <!-- Main section -->
